argocd/identity-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app: identity-service
  ports:
    - name: http
      protocol: TCP
      port: 5006
      targetPort: 5000
  type: LoadBalancer
